--- a/src/components/global.less
+++ b/src/components/global.less
@@ -478,3 +478,34 @@ body {
     white-space: nowrap;
   }
 }
+.table-wrapper {
+  padding: 15px;
+  background: #fff;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  .ant-form-inline {
+    .ant-form-item {
+      display: flex;
+      margin-bottom: 5px;
+      margin-right: 0;
+      .ant-form-item-control-wrapper {
+        flex: 1 1;
+        display: inline-block;
+        vertical-align: middle;
+      }
+      > .ant-form-item-label {
+        line-height: 32px;
+        padding-right: 8px;
+        width: auto;
+      }
+      .ant-form-item-control {
+        height: 32px;
+        line-height: 32px;
+      }
+    }
+  }
+  .table-operator{
+    margin: 10px 0;
+    text-align: left;
+  }
+}
