--- a/src/components/global.less
+++ b/src/components/global.less
@@ -519,3 +519,12 @@ body {
     color: #f57070;
   }
 }
+.mb-10{
+  margin-bottom: 10px;
+}
+
+
+// 
+.ant-upload-picture-card-wrapper{
+  display: block;
+}
